fix: Simplify project structure and set PYTHONPATH in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
       - name: Run unit & integration tests (pytest)
-        run: pytest -q
+        run: PYTHONPATH=$PYTHONPATH:. pytest -q
